Fix useless vertical scrollbar in web settings

--- a/Modules/WebDashboardModule/ClientApp/src/styles.scss
+++ b/Modules/WebDashboardModule/ClientApp/src/styles.scss
@@ -44,3 +44,7 @@ body {
 .b-0 {
     bottom: 0 !important;
 }
+
+.mat-tab-body-wrapper {
+    flex-grow: 1;
+}
